fix layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,8 @@ body,
 html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 body {
